--- a/src/app/payment-method/payment-method.component.html
+++ b/src/app/payment-method/payment-method.component.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div [hidden]="showForm" class="w-100" style="display: flex; flex-direction: row;">
+            <div class="w-100" style="display: flex; flex-direction: row;">
                 <button (click)="showForms(0)" mat-raised-button class="btn w-100 btn-followUp" color="primary">
                     Add New Payment Method
                 </button>
