--- a/src/app/payment-method/payment-method.component.html
+++ b/src/app/payment-method/payment-method.component.html
@@ -8,7 +8,7 @@
                 <div class="circle2"></div>
             </div>
         </div>
-        <div class="row col-12 col-md-8 offset-md-2">
+        <div class="col-12 col-md-8 offset-md-2">
             <div class="cardsSection w-100">
                 <div *ngIf="cards.length > 0" class="w-100 p-0">
                     <h4>Added Payment Methods: </h4>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-100" style="display: flex; flex-direction: row;">
+            <div class="w-100 buttonRow">
                 <button (click)="showForms(0)" mat-raised-button class="btn w-100 btn-followUp" color="primary">
                     Add New Payment Method
                 </button>
