css & loader fixed

--- a/src/app/payment-method/payment-method.component.html
+++ b/src/app/payment-method/payment-method.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true">
+<div class="page-header main" data-parallax="true">
     <div class="filter"></div>
     <div class="container">
         <div class="row">
